# switchbard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  mise.toml  power-of-10-overrides.md
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  release-linux.yml
backlog/: config.yml
backlog/tasks/: task-1 - Wire-remove_worktree_alias-into-worktree-removal-orphaned-config-aliases.md  task-2 - Make-config-save_to-atomic-write-tmp-then-rename.md  task-3 - Report-stopped-services-when-a-worktree-removal-fails.md  task-4 - Consolidate-duplicated-post-write-choreography-DRY.md  task-5 - Add-tests-for-multi-step-worktree-removal-orchestration.md  task-6 - Harden-validate_refish-against-leading-dash-refnames.md  task-7 - Document-standardize-HiveApp-command-method-naming-convention.md  task-8 - Informational-documented-and-accepted-mutation-layer-tradeoffs.md  task-9 - Harden-git-invocation-scrub-GIT_-env-drop-pre-push-hook.md
crates/hive-core/: Cargo.toml
crates/hive-core/src/: attribution.rs  classify.rs  config.rs  discover.rs  expected_port.rs  git_probe.rs  kill.rs  lib.rs  resolve.rs  scanner.rs  spawn.rs  types.rs  workflow.rs  worktree.rs
crates/hive-gui/: Cargo.toml
crates/hive-gui/assets/: icon.icns
crates/hive-gui/examples/: classify_check.rs  probe.rs  probe_services.rs  sweep.rs
crates/hive-gui/src/: app.rs  lib.rs  main.rs  workers.rs
crates/hive-gui/src/runtime/: mod.rs  worktrees.rs
crates/hive-gui/src/sync/: mod.rs  status.rs
crates/hive-gui/src/ui/: column_widths.rs  listeners.rs  mod.rs  onboarding.rs  path_display.rs  servers.rs  sidebar.rs  theme.rs  top_bar.rs  workspace.rs  worktrees.rs
crates/hive-gui/src/ui/components/: branch_label.rs  mod.rs  mono_cell.rs  section.rs  status_pill.rs  strings.rs  table_shell.rs
crates/hive-gui/src/ui/unified/: mod.rs
crates/hive-gui/src/ui/workspace/: mod.rs
crates/hive-gui/src/ui/worktrees/: tooltips.rs
crates/switchbard-core/: Cargo.toml
crates/switchbard-core/src/: agent_context.rs  attribution.rs  backlog.rs  config.rs  discover.rs  expected_port.rs  git_env.rs  git_probe.rs  lib.rs  open_url.rs  scanner.rs  types.rs  workflow.rs  worktree.rs  worktree_create.rs  worktree_remove.rs
crates/switchbard-core/tests/: worktree_create.rs
crates/switchbard-gui/: Cargo.toml
crates/switchbard-gui/examples/: classify_check.rs  probe.rs  probe_services.rs  sweep.rs
crates/switchbard-gui/src/: app.rs  lib.rs  main.rs  perf.rs  workers.rs  worktree_actions.rs
crates/switchbard-gui/src/runtime/: mod.rs  worktree_create.rs  worktree_names.rs  worktree_rename.rs  worktrees.rs
crates/switchbard-gui/src/sync/: kick.rs
crates/switchbard-gui/src/ui/: agent_context.rs  backlog.rs  legibility.rs  mod.rs  onboarding.rs  path_display.rs  sidebar.rs  theme.rs  top_bar.rs
crates/switchbard-gui/src/ui/components/: badge.rs  branch_label.rs  mod.rs  path_cell.rs  section.rs  status_pill.rs  strings.rs  table_shell.rs
crates/switchbard-gui/src/ui/workspace/: create_worktree.rs  mod.rs  rename_worktree.rs  tooltips.rs
crates/switchbard-gui/tests/: egui_kittest_harness.rs  legibility_audit.rs  perf_stats.rs  ui_snapshot.rs  ui_views.rs  worktree_branch_delete_state.rs  worktree_create_state.rs  worktree_names.rs  worktree_removal_error.rs  worktree_removal_orchestration.rs  worktree_rename_state.rs
crates/switchbard-gui/tests/common/: mod.rs
docs/: INSTALL-LINUX.md  INSTALL-MAC.md  design.md  product-trajectory.md
docs/perf/: README.md
docs/perf/runs/: 2026-06-05-servers-before-perf-fix.json  2026-06-05-servers-render-smoke.json  2026-06-05-servers-scroll-smoke.json  2026-06-05-worktree-create-scroll-smoke.json  2026-06-20-backlog-bulk-actions-render-smoke.json  2026-06-20-backlog-cleaner-servers-render-smoke.json  2026-06-20-backlog-shift-select-render-smoke.json  2026-06-20-backlog-sort-servers-scroll-smoke.json  2026-06-20-backlog-status-refresh-render-smoke.json  2026-06-20-backlog-view-servers-scroll-smoke.json  2026-06-24-agent-context-estimate-servers-scroll-smoke.json
scripts/: bundle-mac.sh  package-dmg.sh  perf-summary.py  rebuild-and-reload.sh  strip_icon_background.py  verify_agent_context_inspector_ui_alignment.sh  verify_egui_030_upgrade.sh  verify_egui_kittest_harness.sh
