[workspace]
resolver = "2"
members = ["crates/hive-core", "crates/hive-gui"]

[workspace.package]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
