[workspace]
resolver = "2"
members = ["crates/switchbard-core", "crates/switchbard-gui"]

[workspace.package]
edition = "2021"
rust-version = "1.95"
version = "0.3.0"
authors = ["Ben Chandler"]
license = "MIT"
repository = "https://github.com/benpchandler/switchbard"
homepage = "https://github.com/benpchandler/switchbard"
readme = "README.md"
description = "Local-first dashboard for dev servers and git worktrees"
keywords = ["devtools", "git", "worktree", "macos", "linux"]
categories = ["development-tools", "gui"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
