[package]
name = "hive-gui"
version = "0.1.0"
edition.workspace = true

[dependencies]
hive-core = { path = "../hive-core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = "0.2"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }

[[bin]]
name = "hive"
path = "src/main.rs"
