[package]
name = "hive-gui"
version = "0.1.0"
edition.workspace = true

[dependencies]
hive-core = { path = "../hive-core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = "0.2"
# Mac-only build, so we strip the Linux winit features (wayland/x11) — no
# functional change, smaller compile.
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
# Native file picker (NSOpenPanel on macOS) for the "Add repo…" flow.
rfd = "0.14"

[[bin]]
name = "hive"
path = "src/main.rs"
