[package]
name = "switchbard-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Switchbard — local-first dashboard for dev servers and git worktrees. egui app."
keywords = ["devtools", "git", "worktree", "linux", "egui"]
categories = ["development-tools", "gui"]

[dependencies]
switchbard-core = { path = "../switchbard-core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = "0.2"
egui_extras = { version = "0.29", features = ["all_loaders"] }
# Native file picker for the "Add repo…" flow.
rfd = "0.14"
# Resolve $HOME for the first-launch discovery scan and "~/..." path display.
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

[[bin]]
name = "switchbard"
path = "src/main.rs"
