[package]
name = "switchbard-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Switchbard — local-first dashboard for dev servers and git worktrees. egui app."
keywords = ["devtools", "git", "worktree", "linux", "egui"]
categories = ["development-tools", "gui"]

[dependencies]
switchbard-core = { path = "../switchbard-core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = "0.2"
egui_extras = { version = "0.30", features = ["all_loaders"] }
# Native file picker for the "Add repo…" flow.
rfd = "0.14"
# Resolve $HOME for the first-launch discovery scan and "~/..." path display.
dirs = "5"

[dev-dependencies]
egui_kittest = { version = "0.30", features = ["snapshot", "wgpu"] }
kittest = "0.1"
tempfile = "3"

# egui_kittest's `wgpu` feature pulls wgpu with `default-features = false` and
# only the `wgsl` feature — i.e. with NO GPU backend compiled in. On macOS
# (Metal-only) that leaves `wgpu_snapshot` with zero adapters ("No adapter
# found"). Depending on wgpu here with the `metal` feature re-enables the
# backend via Cargo feature unification. Keep the major version in lock-step
# with egui_kittest's wgpu (currently 23.x).
[target.'cfg(target_os = "macos")'.dev-dependencies]
wgpu = { version = "23", default-features = false, features = ["metal"] }

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.30", default-features = false, features = ["accesskit", "default_fonts", "glow"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.30", default-features = false, features = ["accesskit", "default_fonts", "glow", "x11", "wayland"] }

[[bin]]
name = "switchbard"
path = "src/main.rs"
